--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,7 +5,7 @@
     <title>Hello </title>
 </head>
 <body>
-    <h1>yuki</h1>
-    <p1>{{ hello }}</p1>
+    <h1>{{ article.title }}</h1>
+    <p1>{{ article.context }}</p1>
 </body>
 </html>
