--- a/blog/templates/blog/article_page.html
+++ b/blog/templates/blog/article_page.html
@@ -10,6 +10,6 @@
 <p>{{ article.context }}</p>
 <br>
 <br>
-<a href="">修改文章</a>
+<a href="{% url 'blog:edit_page' article.id %}">修改文章</a>
 </body>
 </html>
